# write.py

./: README.md  setup.cfg  setup.py
tests/examples/: write(path,"string")  write(path,42)
tests/write/examples/: write(path,"хуй")  write(path,None)  write(path,b"bytes")  write(path,dict())
write/: __init__.py
