[metadata]
name = write
version = 2018.11.20
url = https://github.com/looking-for-a-job/write.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = write file

[options]
install_requires = 
	mkdir
	public
	setuptools
packages = 
	write
