# https://pypi.org/project/setupcfg-generator/
[metadata]
name = write
version = 2019.4.13
url = https://github.com/looking-for-a-job/write.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = write file

[options]
install_requires = 
	mkdir
	public
	setuptools
packages = 
	write
